FIX BACKUP LOGIC

--- a/index.html
+++ b/index.html
@@ -1177,13 +1177,15 @@
           >
             匯出Power BI專用CSV
           </button>
+          <!-- ▼▼▼【修改】更新按鈕文字與提示 ▼▼▼ -->
           <button
             id="exportDailyJsonBtn"
             class="button button-info"
-            title="(平板用) 匯出今日在平板上新增的所有紀錄"
+            title="匯出目前儲存在此裝置上的所有紀錄為一個完整的 JSON 備份檔"
           >
-            匯出本日新紀錄 (JSON)
+            匯出完整資料庫 (JSON)
           </button>
+          <!-- ▲▲▲【修改】完成 ▲▲▲ -->
         </div>
       </div>
 
